--- a/requirements.txt
+++ b/requirements.txt
@@ -1,121 +1,28 @@
-aiohappyeyeballs==2.3.4
-aiohttp==3.10.0
-aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.4.0
-asgiref==3.8.1
-asttokens==2.4.1
-attrs==23.2.0
-backcall==0.2.0
-beautifulsoup4==4.12.3
-bidict==0.23.1
-bleach==6.1.0
 blinker==1.8.2
-certifi==2024.6.2
-cffi==1.16.0
-chardet==3.0.4
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-contourpy==1.2.1
-cycler==0.12.1
-decorator==5.1.1
-defusedxml==0.7.1
-docopt==0.6.2
-executing==2.0.1
-fastjsonschema==2.20.0
+certifi==2024.7.4
+cffi==1.17.0
+cryptography==43.0.0
 Flask==3.0.3
 Flask-Cors==4.0.1
-Flask-SocketIO==5.3.6
-fonttools==4.53.1
-frozenlist==1.4.1
-gevent==24.2.1
-greenlet==3.0.3
-grequests==0.7.0
 h11==0.14.0
-h2==3.2.0
-hid==1.0.6
-hidapi==0.14.0.post2
-hpack==3.0.0
-http3==0.6.7
 httpcore==1.0.5
 httpx==0.27.0
-hyperframe==5.2.0
-idna==2.10
-ipython==8.12.3
+idna==3.7
 itsdangerous==2.2.0
-jedi==0.19.1
 Jinja2==3.1.4
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-jupyterlab_pygments==0.3.0
-kiwisolver==1.4.5
+jwt==1.3.1
 MarkupSafe==2.1.5
-matplotlib==3.9.1
-matplotlib-inline==0.1.7
-memory-profiler==0.61.0
-mistune==3.0.2
-multidict==6.0.5
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
+netifaces==0.10.6
 nodeenv==1.9.1
-numpy==2.0.0
-packaging==24.1
-pandas==2.2.2
-pandocfilters==1.5.1
-parso==0.8.4
-pexpect==4.9.0
-pickleshare==0.7.5
-pillow==10.4.0
-pipreqs==0.5.0
-platformdirs==4.2.2
-prisma==0.13.1
-prompt_toolkit==3.0.47
-psutil==6.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
+prisma==0.15.0
 pycparser==2.22
 pydantic==2.8.2
 pydantic_core==2.20.1
-pygame==2.5.2
-Pygments==2.18.0
-PyJWT==2.8.0
-pyparsing==3.1.2
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-engineio==4.9.1
-python-socketio==5.11.3
-pytz==2024.1
-pywin32==306
-pyzmq==26.0.3
-referencing==0.35.1
-requests==2.32.3
-requests-async==0.6.2
-rfc3986==1.5.0
-rpds-py==0.19.1
-setuptools==72.1.0
-simple-websocket==1.0.0
-six==1.16.0
+setuptools==3.3
 sniffio==1.3.1
-socketIO-client==0.7.2
-soupsieve==2.5
-stack-data==0.6.3
-tinycss2==1.3.0
-tomlkit==0.13.0
-tornado==6.4.1
-traitlets==5.14.3
+socketio==0.2.1
+tomlkit==0.13.2
 typing_extensions==4.12.2
-tzdata==2024.1
-urllib3==2.2.2
-wcwidth==0.2.13
-webencodings==0.5.1
-websocket-client==1.8.0
 Werkzeug==3.0.3
-wsproto==1.2.0
-yarg==0.1.9
-yarl==1.9.4
-zope.event==5.0
-zope.interface==6.4.post2
