--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:root@localhost:5432/splitq"
-SOCKETIO_SERVER=http://localhost:4000
+DATABASE_URL="postgresql://splitqdb:yvyQSiEqDLfx0GgX0t9OMoso77Ziq1Xh@dpg-cqtsb72j1k6c73fqkccg-a.ohio-postgres.render.com/splitqdb"
+SOCKETIO_SERVER=https://splitq-socket-io.onrender.com
 JWT_SECRET=splitpay
