--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ anyio==4.4.0
 blinker==1.8.2
 certifi==2024.7.4
 cffi==1.17.0
-cryptography==43.0.0
 Flask==3.0.3
 Flask-Cors==4.0.1
 h11==0.14.0
@@ -12,9 +11,8 @@ httpx==0.27.0
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
-jwt==1.3.1
+PyJWT==2.8.0
 MarkupSafe==2.1.5
-netifaces==0.10.6
 nodeenv==1.9.1
 prisma==0.15.0
 pycparser==2.22
@@ -22,7 +20,7 @@ pydantic==2.8.2
 pydantic_core==2.20.1
 setuptools==3.3
 sniffio==1.3.1
-socketio==0.2.1
+python-socketio==5.11.3
 tomlkit==0.13.2
 typing_extensions==4.12.2
 waitress==3.0.0
